Fix line wrapping for todo item (#41)

--- a/index.css
+++ b/index.css
@@ -211,7 +211,7 @@ body {
 }
 
 .todo-list li label {
-	word-break: break-all;
+	overflow-wrap: break-word;
 	padding: 15px 15px 15px 60px;
 	display: block;
 	line-height: 1.2;
